--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "@browser-logos/tor": "^1.0.4",
     "@browser-logos/vivaldi": "^2.1.3",
     "@browser-logos/yandex": "^1.0.4",
+    "chrome-profile-list": "^1.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^3.2.0",
     "execa": "^1.0.0",
